--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,121 +1,202 @@
-body{
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-    font-size: 14px;
+/* start - structure*/
 
-}
-
-.header h1{
+*{
     margin: 0;
     padding: 0;
-    font-family: 'Lato', sans-serif;
-    font-size: 20px;
 }
 
-.header{
-    background-color: #E0E0E0;
-    height: 60px;
+body{
+    font-family: 'Lato', sans-serif;
+}
+
+input[type="checkbox"]{
+    display: none;
+}
+
+nav{
+    position: absolute;
+    display: none;
     width: 100%;
+    height: 1000px;
+}
+
+header{
+    display: block;
+    width: 100%;
+}
+
+main{
+    display: block;
+    width: 100%;
+}
+
+/* end - structure */
+
+
+/* start - nav - interactive menu */
+
+nav .container{
+    width: 100%;
+    height: 100%;
+    margin-left: 20%;
+    background-color: black;
+}
+
+nav label{
+    position: absolute;
+    font-size: 20px;
+    color: chartreuse;
+    font-weight: bold;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.options ul{
+    width: 100%;
+    list-style: none;
+    padding-top: 40px;
+}
+
+.options a{
+    display: block;
+    text-decoration: none;
+    color: white;
+    text-align: right;
+    padding: 10px;
+}
+
+a:hover{
+    background-color: blanchedalmond;
+    color: black;
+}
+
+#close:checked ~ nav {
+    display: none;
+}
+
+/* end - nav - interactive menu */
+
+/*------------------------------------------/*
+
+/* start - header */
+
+header .header{
+    display: flex;
+    align-items: center;
+    background-color:  #E0E0E0;
+    height: 60px;
+}
+
+header .logo  {
+    width: 15%;
     display: flex;
 }
 
-.logo{
-    width: 50px;
-    margin: auto;
-    padding-left: 20px;
-}
-
-.logo img {
-    height: 27.63px;
-    padding: 0;
-}
-
-.center-header{
-    text-align: center;
-    margin: auto;
+header .center-header {
+    display: flex;
     width: 100%;
 }
 
-.menu{
-    width: 50px;
-    padding-right: 20px;
+header .menu-image   {
+    width: 15%;
     text-align: right;
-    margin: auto;
-    font-size: 35px;
 }
+
+header img {
+    height: 27.63px;
+    margin-left: 20px;
+}
+
+header h1{
+    font-size: 18px;
+    width: 100%;
+    text-align: center;
+}
+
+header label{
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+header label:hover{
+    opacity: 0.2;
+}
+
+/* end - header */
+
+/*------------------------------------------/*
+
+/* start - main -> form */
 
 .container{
     margin: 20px;
-    padding: 20px;
     border-radius: 4px;
-}
-
-form{
-    width: 100%;
+    /*border: 2px solid black;*/
+    font-size: 14px;
 }
 
 .form{
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    border-bottom: 2px solid black;
+    margin: 10px;
+    /*border: 2px solid black;*/
 }
 
-.form input, select{
-    width: 100%;
+.form input, .form select{
+    display: block;
     border-radius: 4px;
-    margin-bottom: 20px;
-    margin-top: 5px;
-    padding: 7px 0;
-    font-family: 'Lato', sans-serif;
+    margin-bottom: 15px;
+    width: 100%;
 }
 
 .form .button-submit{
-    width: 100%;
     background-color:  #333333;
-    border-radius: 4px;
     color: white;
-    margin-bottom: 28px;
-    margin-top: 5px;
-    padding: 7px 0;
-    font-family: 'Lato', sans-serif;
+    padding: 5px;
 }
 
-.result{
-    font-size: 10px;
-    display: block;
-    text-align: right;
-}
+/* end - main -> form */
+
+/*------------------------------------------/*
+
+/* start - main -> report */
 
 .report{
-    display: block;
-    width: 100%;
+    margin: 10px;
 }
 
 .report p{
     text-align: center;
-    font-size: 18px;
-    padding-top: 0;
-    margin-top: 0;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 10px 0;
 }
 
-table{
+.report table{
     border-collapse: collapse;
     margin: auto;
-    width: 100%;
 }
 
-td, th {
+.report td, .report th {
     border-bottom: 1px solid #979797;
     padding: 5px 10px;
 }
 
-td:first-child + td { 
-    width: 52% 
+ .report .result{
+    font-size: 10px;
+    text-align: right;
+    font-weight: bold;
 }
 
-td:first-child + td + td {  
-    width: 45%px 
+.report .total{
+    text-align: right;
+    font-weight: bold;
 }
+
+
+
+
+/* end - main -> report */
+
+
+
+
+
