--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ header h1{
 
 header label{
     margin-right: 20px;
+    font-size: 25px;
     cursor: pointer;
 }
 
@@ -128,29 +129,40 @@ header label:hover{
 
 /* start - main -> form */
 
-.container{
+main .container{
+    display: block;
     margin: 20px;
+    /*border: #333333 1px solid;*/
     border-radius: 4px;
-    /*border: 2px solid black;*/
     font-size: 14px;
 }
 
 .form{
+    display: block;
     margin: 10px;
-    /*border: 2px solid black;*/
+    font-size: 14px;
 }
 
-.form input, .form select{
+.form input[type="text"], .form select{
     display: block;
     border-radius: 4px;
-    margin-bottom: 15px;
+    border-width: 1px;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .form .button-submit{
     background-color:  #333333;
     color: white;
+    border-radius: 4px;
     padding: 5px;
+    width: 100%;
+}
+
+.form label{
+    display: block;
+    padding-bottom: 5px;
+
 }
 
 /* end - main -> form */
@@ -161,18 +173,21 @@ header label:hover{
 
 .report{
     margin: 10px;
+    margin-bottom: 0;
+    border-radius: 4px;
+    font-size: 10px;
 }
 
 .report p{
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     margin: 10px 0;
 }
 
 .report table{
+    width: 100%;
     border-collapse: collapse;
-    margin: auto;
 }
 
 .report td, .report th {
@@ -180,18 +195,16 @@ header label:hover{
     padding: 5px 10px;
 }
 
- .report .result{
-    font-size: 10px;
-    text-align: right;
-    font-weight: bold;
-}
-
 .report .total{
     text-align: right;
     font-weight: bold;
 }
 
-
+.report .result{
+    font-size: 10px;
+    margin: 0;
+    text-align: right;
+}
 
 
 /* end - main -> report */
