--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,27 +7,22 @@
 
 body{
     font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    font-weight: normal;
 }
 
 input[type="checkbox"]{
     display: none;
 }
 
-nav{
-    position: absolute;
-    display: none;
-    width: 100%;
-    height: 1000px;
-}
-
-header{
-    display: block;
-    width: 100%;
-}
 
 main{
     display: block;
     width: 100%;
+}
+
+nav{
+    display: none;
 }
 
 /* end - structure */
@@ -35,26 +30,27 @@ main{
 
 /* start - nav - interactive menu */
 
-nav .container{
-    width: 100%;
-    height: 100%;
+
+header input:checked ~ nav{ 
+    position: absolute;
+    display: flex;
     margin-left: 20%;
+    width: 80%;
+    height: 1000px;
     background-color: black;
 }
 
-nav label{
+header .button-close{
+    display: flex;
     position: absolute;
-    font-size: 20px;
-    color: chartreuse;
-    font-weight: bold;
-    padding: 10px 20px;
-    cursor: pointer;
+    background-color: khaki;
+    padding: 10px;
 }
 
-.options ul{
+.options{
+    text-align: right;
     width: 100%;
-    list-style: none;
-    padding-top: 40px;
+    padding-top: 37px;
 }
 
 .options a{
@@ -65,14 +61,17 @@ nav label{
     padding: 10px;
 }
 
+.options ul{
+    width: 100%;
+    list-style: none;
+}
+
 a:hover{
     background-color: blanchedalmond;
     color: black;
 }
 
-#close:checked ~ nav {
-    display: none;
-}
+
 
 /* end - nav - interactive menu */
 
@@ -82,40 +81,27 @@ a:hover{
 
 header .header{
     display: flex;
-    align-items: center;
     background-color:  #E0E0E0;
-    height: 60px;
-}
-
-header .logo  {
-    width: 15%;
-    display: flex;
-}
-
-header .center-header {
-    display: flex;
-    width: 100%;
-}
-
-header .menu-image   {
-    width: 15%;
-    text-align: right;
-}
+    height: 40px;
+ }
 
 header img {
-    height: 27.63px;
+    height: 22px;
     margin-left: 20px;
+    margin-top: 8px;
 }
 
 header h1{
-    font-size: 18px;
+    font-size: 13px;
     width: 100%;
+    margin-top: 12px;
     text-align: center;
 }
 
-header label{
+header .hamburger{
     margin-right: 20px;
-    font-size: 25px;
+    margin-top: 9px;
+    font-size: 14px;
     cursor: pointer;
 }
 
@@ -129,22 +115,23 @@ header label:hover{
 
 /* start - main -> form */
 
-main .container{
+main .container-form {
     display: block;
-    margin: 20px;
+    margin: 10px 20px;
+    margin-bottom: 0;
     /*border: #333333 1px solid;*/
-    border-radius: 4px;
-    font-size: 14px;
+    /*border-radius: 4px;*/
+    font-size: 12px;
 }
 
 .form{
     display: block;
-    margin: 10px;
-    font-size: 14px;
+    /*margin: 10px;*/
 }
 
 .form input[type="text"], .form select{
     display: block;
+    padding: 3px 0;
     border-radius: 4px;
     border-width: 1px;
     width: 100%;
@@ -155,13 +142,14 @@ main .container{
     background-color:  #333333;
     color: white;
     border-radius: 4px;
-    padding: 5px;
+    padding: 3px;
     width: 100%;
+    margin-bottom: 5px;
 }
 
 .form label{
     display: block;
-    padding-bottom: 5px;
+    padding-bottom: 2px;
 
 }
 
@@ -171,8 +159,16 @@ main .container{
 
 /* start - main -> report */
 
+main .container-report {
+    display: block;
+    margin: 0 20px;
+    margin-top: 10px;
+    border-top: #333333 1px solid;
+    font-size: 12px;
+}
+
 .report{
-    margin: 10px;
+    /*margin: 10px;*/
     margin-bottom: 0;
     border-radius: 4px;
     font-size: 10px;
@@ -182,7 +178,8 @@ main .container{
     text-align: center;
     font-size: 14px;
     font-weight: bold;
-    margin: 10px 0;
+    margin: 15px 0;
+    margin-bottom: 5px;
 }
 
 .report table{
@@ -192,7 +189,7 @@ main .container{
 
 .report td, .report th {
     border-bottom: 1px solid #979797;
-    padding: 5px 10px;
+    padding: 4px 10px;
 }
 
 .report .total{
